 - Initial sub-graph parallelism support for common layers in
   Transformers
 - Truncation selection exchange for LTFB/Population Based Training (PBT)

Support for new network structures:

Support for new layers:
- Added support for 2D Matrices for Scatter and Gather layers
- Added distributed tensor parallelism with channelwise decomposition for channelwise fully connected layer

Python front-end:

Performance optimizations:
 - Enabled the input layers to use a view of the I/O buffers in the
 buffered data coordinator

Model portability & usability:

Experiments & Applications:
 - Example for training Transformer model with D&SP and D&SP-cSub

Internal features:
 - Added operator class

I/O & data readers:
 - Updated SMILES data reader to use sample lists
 - Added explicitly managed buffered reading and local unpacking for the
   SMILES data reader to minimize file access
 - Sample lists with integral indices can use range format (start ... end)
 - Added a new extensible HDF5 data reader that uses a data set schema
   and experiment schema files to define how the data is represented.
   This allows the user to change the representation of data without
   changing the data reader.
 - Changed the input layer to take a data field and only produce a
   single output.  Currently valid Data fields are samples, labels,
   and responses.
 - Updated the data coordinator and data readers to
   take dynamic data fields rather than fixed fields.  Input buffers
   are no long allocated for fields that are not used in active
   models.

Build system:

Bug fixes:

Retired features:

============================== Release Notes: v0.102 ==============================
Support for new training algorithms:
 - LTFB is now a first-class training algorithm.
 - LTFB now allows multiple metrics. The local algorithm is favored by
   each trainer and a partner model must win every metric to be declared
   the tournament winner.